defining a new theme was a bad idea, since it broke all other languages. But ThingML looked much nicer :-)

--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
             {
                 "id": "thingml",
                 "aliases": [
-                    "thingml",
-                    "ThingML"
+                    "thingml"
                 ],
                 "extensions": [
                     ".thingml"
@@ -42,13 +41,6 @@
                 "language": "thingml",
                 "scopeName": "text.thingml",
                 "path": "./syntaxes/thingml.tmLanguage.json"
-            }
-        ],
-        "themes": [
-            {
-                "label": "ThingML Theme",
-                "uiTheme": "vs-dark",
-                "path": "./themes/thingml.tmTheme.json"
             }
         ],
         "commands": [
