--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
         "watch": "tsc -watch -p ./"
     },
     "dependencies": {
-        "vscode-languageclient": "^7.0.0"
+        "vscode-languageclient": "^7.0.0",
+        "wait-port": "^0.2.9"
     }
 }
